syntax = "proto3";
package aib.cron.v1beta1;

import "gogoproto/gogo.proto";
import "aib/cron/v1beta1/params.proto";
import "aib/cron/v1beta1/cron.proto";

option go_package = "github.com/dymensionxyz/rollapp-wasm/x/cron/types";

// GenesisState defines the cron module's genesis state.
message GenesisState {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
  repeated WhitelistedContract whitelisted_contracts  = 2  [
    (gogoproto.moretags) = "yaml:\"whitelisted_contracts\"",
    (gogoproto.nullable) = false
  ];
}
